fix front page on mobile

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,7 +1,3 @@
-.smallpage {
-    padding: 5rem;
-}
-
 .smallpage .logo {
     margin-left: auto;
     margin-right: auto;
@@ -11,7 +7,7 @@
 
 .smallpage main {
     background: #222;
-    padding: 5rem;
+    padding: 2rem;
     border-radius: 2rem;
 }
 
@@ -19,6 +15,10 @@ footer {
     display: flex !important;
     flex-direction: row;
     justify-content: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0.5rem;
 }
 
 .linkList {
